feat: reservations
